cabal-version:      2.2
name:               cabal-env
version:            0.1
synopsis:           Manage GHC package-environments with cabal-install
category:           Development
description:
  GHC-8.0 support package environment files.
  Those could be used to view parts of global @cabal-install@ package store.
  .
  Tuned for Oleg's preference, but has some knobs still.

license:            GPL-3.0-or-later AND BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.4.4 || ==8.6.5 || ==8.8.1
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-env.git

library cabal-env-internal
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    CabalEnv.Main
    CabalEnv.Prelude
    CabalEnv.FakePackage
    CabalEnv.Utils

  other-modules:    Paths_cabal_env
  autogen-modules:  Paths_cabal_env

  -- dependencies in library
  build-depends:
    , base            ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0
    , bytestring      ^>=0.10.8.2
    , Cabal           ^>=3.0.0.0
    , cabal-plan      ^>=0.6.0.0
    , containers      ^>=0.5.11.0 || ^>=0.6.0.1
    , directory       ^>=1.3.1.5
    , filepath        ^>=1.4.2
    , Glob            ^>=0.10.0
    , parsec          ^>=3.1.13.0
    , pretty          ^>=1.1.3.6
    , process
    , process-extras
    , split
    , temporary       ^>=1.3

  -- extra dependencies
  build-depends:    optparse-applicative >=0.14.3.0 && <0.16

executable cabal-env
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded
  build-depends:
    , base
    , cabal-env-internal
